--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FuncTools</title>
+    <title>InventorySystem</title>
     <link rel="stylesheet" href="static/mystyle.css">
 </head>
 <body>
+<nav class="sticky">
+    <div class="nav-container">
+        <div class="logo"><a href="/">Оружие России</a></div>
+        <ul class="menu">
+            <li><a href="#popup1">Добавить</a></li>
+            <li><a href="/statistics">Статистика</a></li>
+            <li><a href="#">Third</a></li>
+        </ul>
+        <a href="/logout" class="logout-button">Выйти</a>
+    </div>
+</nav>
 
 
 
-{% block content %}{% endblock %}
+<!--Тут всплывашка для ввода новых позиций в БД -->
+<div id="popup1" class="popup">
+    <h2>Добавить элемент</h2>
+    <form action="" method="post">
+        <input type="text" name="name_gun" placeholder="Название оружия">
+        <textarea name="descr_gun" placeholder="Описание" rows="4"></textarea>
+        <input type="submit" name="submit" value="Добавить элемент">
+    </form>
+    <a href="#close">Закрыть</a>
+</div>
+<div id="overlay1" class="overlay"></div>
+<!--Конец всплывашки-->
 
-<footer>
-    <p>FuncTools - 2024</p>
-</footer>
 
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
