--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -100,11 +100,10 @@ a {
 .menu li a:hover {
     color: #4caf50; /* Цвет текста ссылок при наведении */
 }
-
 .logout-button {
     /* Стили для кнопки выхода */
     padding: 8px 12px;
-    background-color: #4caf50; /* Красный цвет кнопки */
+    background-color: #4caf50; /* Зеленый цвет кнопки */
     color: #ffffff; /* Белый цвет текста кнопки */
     border: none;
     border-radius: 4px;
@@ -113,15 +112,26 @@ a {
 }
 
 .logout-button:hover {
-    /* Стили для кнопки выхода */
+    /* Стили для наведения на кнопку выхода */
+    background-color: #368639; /* Зеленый цвет кнопки при наведении */
+}
+
+.add-button {
+    /* Стили для кнопки добавления */
     padding: 8px 12px;
-    background-color: #368639; /* Красный цвет кнопки */
+    background-color: #af4ca2; /* Фиолетовый цвет кнопки */
     color: #ffffff; /* Белый цвет текста кнопки */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     text-decoration: none;
 }
+
+.add-button:hover {
+    /* Стили для наведения на кнопку добавления */
+    background-color: #7b3686; /* Фиолетовый цвет кнопки при наведении */
+}
+
 
 /*
 Стили для всплывашки
@@ -146,6 +156,18 @@ a {
 .popup form input[type="text"],
 .popup form input[type="submit"],
 .popup form textarea
+{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.popup form select
 {
     display: block;
     width: 100%;
@@ -182,5 +204,34 @@ a {
 
 .overlay:target {
     display: block;
+}
+
+.weapons-container {
+    margin-top: 0; /* Убираем верхний отступ */
+    max-width: max-content;
+    padding: 15px;
+    margin-left: auto; /* Размещаем контейнер слева */
+    margin-right: auto; /* и справа */
+    display: block; /* Делаем блочный элемент */
+}
+
+.weapons-gallery table {
+    width: 100%;
+    border-collapse: collapse;
+    position: static;
+}
+
+.weapons-gallery th, .weapons-gallery td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+.weapons-gallery th {
+    background-color: #af4ca2;
+}
+
+.weapons-gallery tr:hover {
+    background-color: #f5f5f5;
 }
 
