--- a/templates/base.html
+++ b/templates/base.html
@@ -11,22 +11,44 @@
     <div class="nav-container">
         <div class="logo"><a href="/">Оружие России</a></div>
         <ul class="menu">
-            <li><a href="#popup1">Добавить</a></li>
+            <li><a href="/">Каталог</a></li>
             <li><a href="/statistics">Статистика</a></li>
             <li><a href="#">Third</a></li>
         </ul>
-        <a href="/logout" class="logout-button">Выйти</a>
+        <div>
+            <a href="#popup1" class="add-button">Добавить</a></li>
+            <a href="/logout" class="logout-button">Выйти</a>
+        </div>
     </div>
 </nav>
+
+
+
+
+{% block content %}
+{% endblock %}
+
 
 
 
 <!--Тут всплывашка для ввода новых позиций в БД -->
 <div id="popup1" class="popup">
     <h2>Добавить элемент</h2>
-    <form action="" method="post">
-        <input type="text" name="name_gun" placeholder="Название оружия">
-        <textarea name="descr_gun" placeholder="Описание" rows="4"></textarea>
+    <form action="/add_item" method="post">
+        <input type="text" name="name_gun" placeholder="Название оружия" required>
+        <textarea name="descr_gun" placeholder="Описание" rows="4" required></textarea>
+        <select name="gun_type" required>
+            <option value="" disabled selected>Выберите тип оружия</option>
+            <option value="Пистолет">Пистолет</option>
+            <option value="Автомат">Автомат</option>
+            <option value="Винтовка">Винтовка</option>
+        </select>
+        <input type="text" name="manufacturer" placeholder="Производитель" required>
+        <input type="text" name="year" placeholder="Год производства">
+        <input type="text" name="country" placeholder="Страна производства" required>
+        <input type="text" name="price" placeholder="Цена" required>
+        <input type="text" name="quantity" placeholder="Количество">
+        <input type="text" name="image" placeholder="Картинка" required>
         <input type="submit" name="submit" value="Добавить элемент">
     </form>
     <a href="#close">Закрыть</a>
@@ -35,7 +57,5 @@
 <!--Конец всплывашки-->
 
 
-    {% block content %}
-    {% endblock %}
 </body>
 </html>
