--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <ul class="menu">
             <li><a href="/">Каталог</a></li>
             <li><a href="/statistics">Статистика</a></li>
-            <li><a href="#">Third</a></li>
+            <li><a href="#">Статьи</a></li>
         </ul>
         <div>
             <a href="#popup1" class="add-button">Добавить</a></li>
