--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
         <ul class="menu">
             <li><a href="/">Каталог</a></li>
             <li><a href="/statistics">Статистика</a></li>
-            <li><a href="#">Статьи</a></li>
+            <li><a href="/articles">Статьи</a></li>
         </ul>
         <div>
             <a href="#popup1" class="add-button">Добавить</a></li>
@@ -55,7 +55,6 @@
 </div>
 <div id="overlay1" class="overlay"></div>
 <!--Конец всплывашки-->
-
 
 </body>
 </html>
