--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>InventorySystem</title>
     <link rel="stylesheet" href="static/mystyle.css">
 </head>
+<script src="static/scripts.js"></script>
 <body>
 <nav class="sticky">
     <div class="nav-container">
